FIX: refactor endpoints
